--- a/views/profile.html
+++ b/views/profile.html
@@ -7,7 +7,7 @@
 {{define "body"}}
 <div class="box box-primary">
   <div class="box-header with-border">
-    <h3 class="box-title">Edit your profile</h3>
+    <h3 class="box-title">Edit Profile</h3>
   </div>
   <!-- /.box-header -->
   <!-- form start -->
