--- a/views/ovconfig.html
+++ b/views/ovconfig.html
@@ -7,7 +7,7 @@
 {{define "body"}}
 <div class="box box-primary">
   <div class="box-header with-border">
-    <h3 class="box-title">Edit configuration</h3>
+    <h3 class="box-title">Edit Configuration</h3>
   </div>
   <!-- /.box-header -->
   <!-- form start -->
