--- a/views/logs.html
+++ b/views/logs.html
@@ -7,7 +7,7 @@
 {{define "body"}}
 <div class="box box-primary">
   <div class="box-header with-border">
-    <h3 class="box-title">Last 200 lines of OpenVPN log</h3>
+    <h3 class="box-title">Last 200 Lines of OpenVPN Log</h3>
   </div>
   <pre style="font-size: 13px;line-height: 1.4em;">
 {{ range $i, $line := .logs }}{{$line}}
