--- a/views/common/header-account-menu.html
+++ b/views/common/header-account-menu.html
@@ -23,7 +23,7 @@
         <a href="{{urlfor "ProfileController.Get"}}" class="btn btn-default btn-flat">Profile</a>
       </div>
       <div class="pull-right">
-        <a href="{{urlfor "LoginController.Logout"}}" class="btn btn-default btn-flat">Sign out</a>
+        <a href="{{urlfor "LoginController.Logout"}}" class="btn btn-default btn-flat">Sign Out</a>
       </div>
     </li>
   </ul>
